--- a/index.html
+++ b/index.html
@@ -518,6 +518,26 @@
 <body>
   <div class="wrap">
     <div class="topbar">
+	<!-- RUN MODEL -->
+<div class="section" style="margin-top:16px; margin-bottom:16px;">
+  <div class="sectionHeader" style="cursor:default;">
+    <div>
+      <h2>Run Model</h2>
+      <div class="sub">Run the model using the current inputs.</div>
+    </div>
+
+    <div class="row" style="gap:10px;">
+      <select id="modeSelectTop" onchange="setMode(this.value)">
+        <option value="yearly">Yearly (recommended)</option>
+        <option value="monthly">Monthly (debug)</option>
+      </select>
+
+      <button class="btn" onclick="resetDefaults()">Reset</button>
+      <button class="btn primary" onclick="runModel()">Run model</button>
+    </div>
+  </div>
+</div>
+
       <div class="brand">
         <span class="dot"></span>
         <span>FIRE Model</span>
@@ -528,6 +548,7 @@
         <button id="btnInputs" onclick="showTab('inputs')">Setup</button>
         <button id="btnResults" onclick="showTab('results')">Results</button>
       </div>
+	  
     </div>
 
     <!-- HOME -->
@@ -635,8 +656,7 @@
 		</div>
 
 		<div class="row" style="gap:10px;">
-		  <select id="modeSelect"
-				  onchange="event.stopPropagation(); setMode(this.value)">
+
 			<option value="yearly">Yearly (recommended)</option>
 			<option value="monthly">Monthly (debug)</option>
 		  </select>
@@ -684,7 +704,7 @@
 
     <div class="row" style="gap:8px;">
       <button class="btn" onclick="resetDefaults()">Reset defaults</button>
-      <button class="btn primary" onclick="runModel()">Run model</button>
+      
     </div>
   </div>
 
@@ -1268,14 +1288,8 @@ function showTab(name){
 function setMode(mode){
   state.mode = mode;
 
-  const modeSelect = document.getElementById("modeSelect");
-  if (modeSelect) modeSelect.value = mode;
-
-  const chipYearly = document.getElementById("chipModeYearly");
-  const chipMonthly = document.getElementById("chipModeMonthly");
-
-  if (chipYearly) chipYearly.classList.toggle("active", mode === "yearly");
-  if (chipMonthly) chipMonthly.classList.toggle("active", mode === "monthly");
+  const top = document.getElementById("modeSelectTop");
+  if (top) top.value = mode;
 
   saveState();
 }
