--- a/index.html
+++ b/index.html
@@ -640,9 +640,15 @@
 			<option value="yearly">Yearly (recommended)</option>
 			<option value="monthly">Monthly (debug)</option>
 		  </select>
+
+		  <button class="btn primary"
+				  onclick="event.stopPropagation(); runModel()">
+			Run model
+		  </button>
+
 		  <div class="chev" id="inputsChev">▾</div>
 		</div>
-	  </div>
+
 
 	  <div class="sectionBody" id="inputsSectionBody">
 
@@ -677,17 +683,7 @@
 
   <div class="hr"></div>
 
-  <div class="row">
-    <button class="btn" onclick="toggleAdvanced()">Stocks and Super
-      <span class="pill" id="advPill">Hidden</span>
-    </button>
 
-<div class="row">
-  <div class="row" style="gap:8px; margin-left:auto;">
-    <button class="btn" onclick="resetDefaults()">Reset defaults</button>
-    <button class="btn primary" onclick="runModel()">Run model</button>
-  </div>
-</div>
   </div>  <!-- end inputsSectionBody -->
 </div>    <!-- end Inputs .section -->
 
