--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 		</div>
 
 		<!-- Status (FULL WIDTH, BELOW) -->
-		<div class="card">
+		<div class="card" id="statusCard" style="display:none;">
 		  <div class="row">
 			<div>
 			  <h2>Status</h2>
@@ -593,6 +593,8 @@
 			  <button class="btn" onclick="pingAPI()">Re-check API</button>
 			</div>
 		  </div>
+		</div>
+
 
 		  <div class="hr"></div>
 
