--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@
 		</div>
 
 		<!-- Status (FULL WIDTH, BELOW) -->
+		<!-- change display to style="display:block;" to show and style="display:none;" to hide-->
 		<div class="card" id="statusCard" style="display:none;">
 		  <div class="row">
 			<div>
